# DX12Rendering

./: .gitignore  CMakeLists.txt  README.md
Animation/: CMakeLists.txt
Animation/private/: AnimRepo.cpp  AnimRepoMeta.cpp  Animation.cpp  Animator.cpp  AnimatorMeta.cpp  AnimatorUpdater.cpp  AnimatorUpdater.h  AnimatorUpdaterMeta.cpp  AnimatorUpdaterMeta.h  utils.cpp  utils.h
Animation/public/: AnimRepo.h  AnimRepoMeta.h  Animation.h  Animator.h  AnimatorMeta.h
App/: CMakeLists.txt
App/private/: App.cpp
App/public/: App.h
AppSettings/: CMakeLists.txt
AppSettings/private/: AppEntryPoint.cpp  AppEntryPointMeta.cpp  AppSettings.cpp  AppSettingsMeta.cpp  CombinatoryEntryPointMetaTag.cpp  ReflectionEntryPointMetaTag.cpp  RendererEntryPointMetaTag.cpp  SceneConverterEntryPointMetaTag.cpp  SettingsReader.cpp  SettingsReaderMeta.cpp
AppSettings/public/: AppEntryPoint.h  AppEntryPointMeta.h  AppSettings.h  AppSettingsMeta.h  CombinatoryEntryPointMetaTag.h  ReflectionEntryPointMetaTag.h  RendererEntryPointMetaTag.h  SceneConverterEntryPointMetaTag.h  SettingsReader.h  SettingsReaderMeta.h
CascadedSM/: CMakeLists.txt
CascadedSM/private/: CascadedSM.cpp  CascadedSM.h  CascadedSMMeta.cpp  CascadedSMSettings.cpp  CascadedSMSettings.h  CascadedSMSettingsMeta.cpp  CascadedSMSettingsMeta.h  CommandListCache.h  utils.cpp  utils.h
CascadedSM/public/: CascadedSM.h
Collada/: CMakeLists.txt
Collada/private/: Collada.h  ColladaAnimation.cpp  ColladaAnimationMeta.cpp  ColladaEntities.cpp  ColladaReader.cpp  ColladaReader.h  ColladaReaderMeta.cpp  ColladaReaderMeta.h  ColladaScene.cpp  ColladaSceneBuilder.cpp  ColladaSceneMeta.cpp  SceneBuilderUtils.h  SceneSettings.cpp  SceneSettingsMeta.cpp  SkeletonReader.cpp  SkeletonReader.h  collada.cpp  colladaTreeBuilder.cpp  colladaTreeBuilder.h
Collada/public/: ColladaAnimation.h  ColladaAnimationMeta.h  ColladaEntities.h  ColladaReader.h  ColladaScene.h  ColladaSceneMeta.h  SceneSettings.h  SceneSettingsMeta.h
Combinatory/: CMakeLists.txt
Combinatory/private/: BlockGroupProcessor.cpp  BlockGroupProcessor.h  Combinatory.cpp  CombinatoryEntryPoint.cpp  CombinatoryEntryPoint.h  CombinatoryEntryPointMeta.cpp  CombinatoryEntryPointMeta.h  CombinatorySettings.cpp  CombinatorySettings.h  CombinatorySettingsMeta.cpp  CombinatorySettingsMeta.h  Entities.cpp  Entities.h  ItemManager.cpp  ItemManager.h  ItemManagerMeta.cpp  ItemManagerMeta.h  LogJobSystemMeta.cpp  LogJobSystemMeta.h  ProcessorsJobSystemMeta.cpp  ProcessorsJobSystemMeta.h  ResultJobSystemMeta.cpp  ResultJobSystemMeta.h  VariationNumber.cpp  VariationNumber.h  utils.cpp  utils.h
Combinatory/public/: Combinatory.h
CommonResources/: CMakeLists.txt
CommonResources/private/: AsyncTickUpdater.cpp  AsyncTickUpdaterMeta.cpp  CameraDepthTexLoadedNotificationMeta.cpp  DXCameraBufferMeta.cpp  DXCameraDepthTexMeta.cpp  DXGBufferPositionTexMeta.cpp  DXLightsBufferMeta.cpp  DXRenderTextureVertexBufferMeta.cpp  ICamera.cpp  ICameraMeta.cpp  RenderDataUpdater.cpp  RenderDataUpdaterMeta.cpp  ScriptingStructMeta.cpp  TextureLoadedNotificationMeta.cpp  TickUpdater.cpp  TickUpdaterMeta.cpp
CommonResources/public/: AsyncTickUpdater.h  AsyncTickUpdaterMeta.h  CameraDepthTexLoadedNotificationMeta.h  DXCameraDepthTexMeta.h  DXGBufferPositionTexMeta.h  DXLightsBufferMeta.h  DXRenderTextureVertexBufferMeta.h  DXSMSettingsBufferMeta.h  ICamera.h  ICameraMeta.h  RenderDataUpdater.h  RenderDataUpdaterMeta.h  ScriptingStructMeta.h  TextureLoadedNotificationMeta.h  TickUpdater.h  TickUpdaterMeta.h
DataLib/: CMakeLists.txt
DataLib/private/: DataLib.cpp  MemoryFile.cpp
DataLib/public/: DataLib.h  MemoryFile.h
DeferredRP/: CMakeLists.txt
DeferredRP/private/: CascadedSM.h  CommandListCache.cpp  DXDeferredMaterial.cpp  DXDeferredMaterialMeta.cpp  DXDeferredRP.cpp  DXGBufferDiffuseLitTexMeta.cpp  DXLightsCalculationsMaterial.cpp  DXPostLightsCalculationsMaterial.cpp  DXPostLightsCalculationsMaterialMeta.cpp  DXShadowMapDSDescriptorHeapMeta.cpp  DXShadowMapMeta.h  DXShadowMapRDU.cpp  DXShadowMapUpdater.cpp  DeferredRendering.cpp  DeferredRendering.h  LightsManager.cpp  LightsManager.h  LightsManagerMeta.cpp  utils.cpp  utils.h
DeferredRP/public/: CommandListCache.h  DXDeferredMaterial.h  DXDeferredMaterialMeta.h  DXDeferredRP.h  DXDeferredRPMeta.cpp  DXGBufferSpecularLitTexMeta.h  DXGBufferSpecularTexMeta.h  DXLightsCalculationsMaterial.h  DXLightsCalculationsMaterialMeta.h  DXShadowMapDSMeta.h  DeferredRendering.h  LightsManager.h  LightsManagerMeta.h
Frontend/: CMakeLists.txt
Frontend/private/: CommandReader.cpp  CommandReader.h  Frontend.cpp  FrontendJobSystemMeta.cpp  FrontendJobSystemMeta.h  FrontendManager.cpp  FrontendManager.h  FrontendManagerMeta.cpp  FrontendManagerMeta.h  utils.cpp  utils.h
Frontend/public/: Frontend.h
ImageLoading/: CMakeLists.txt
ImageLoading/private/: FontAsset.cpp  FontAssetLoadedNotificationMeta.cpp  ForntAssetMeta.cpp  ImageLoadedNotificationMeta.cpp  ImageLoader.cpp  ImageLoader.h  ImageLoaderMeta.cpp  ImageLoaderMeta.h  ImageLoading.cpp  ImageLoadingSettings.cpp  ImageLoadingSettings.h  ImageLoadingSettingsMeta.cpp  ImageLoadingSettingsMeta.h  ImageTextureMeta.cpp  ImageTextureMeta.h  utils.cpp  utils.h
ImageLoading/public/: FontAsset.h  FontAssetLoadedNotificationMeta.h  FontAssetMeta.h  ImageLoadedNotificationMeta.h  ImageLoading.h
Materials/: CMakeLists.txt
Materials/private/: DXDeferredMaterialMetaTag.cpp  DXMaterial.cpp  DXMaterialMeta.cpp  DXMaterialRepo.cpp  DXMaterialRepoMeta.cpp  DXPixelShaderMeta.h  DXUnlitMaterialMetaTag.cpp  DXVertexShaderMeta.h  MaterialResisteredNotificationMeta.cpp  ShaderRepo.cpp  (+4 more)
Notifications/: CMakeLists.txt
OverlayRP/: CMakeLists.txt
PSM/: CMakeLists.txt
Parser/: CMakeLists.txt
PostProcessRP/: CMakeLists.txt
Reflection/: CMakeLists.txt
RenderPass/: CMakeLists.txt
Renderer/: CMakeLists.txt
Rendering/: CMakeLists.txt
RenderingCore/: CMakeLists.txt
Scene/: CMakeLists.txt
SceneConverter/: CMakeLists.txt
ShadowMapping/: CMakeLists.txt
UnlitRP/: CMakeLists.txt
XMLReader/: CMakeLists.txt
(+620 files in other folders)
