cmake_minimum_required (VERSION 3.8)

add_library (DeferredRP
	"public/DXDeferredRPMeta.h"
	"private/DXDeferredRPMeta.cpp"
	"private/resources/DXGBufferAmbientLitTexMeta.cpp"
	"private/resources/DXGBufferAmbientLitTexMeta.h"
	"private/resources/DXGBufferDiffuseLitTexMeta.cpp"
	"private/resources/DXGBufferDiffuseLitTexMeta.h"
	"private/resources/DXGBufferDiffuseTexMeta.cpp"
	"private/resources/DXGBufferDuffuseTexMeta.h"
	"private/resources/DXGBufferNormalTexMeta.cpp"
	"private/resources/DXGBufferNormalTexMeta.h"
	"private/resources/DXGBufferPositionTexMeta.cpp"
	"private/resources/DXGBufferPositionTexMeta.h"
	"private/resources/DXGBufferSpecularLitTexMeta.cpp"
	"private/resources/DXGBufferSpecularLitTexMeta.h"
	"private/resources/DXGBufferSpecularTexMeta.cpp"
	"private/resources/DXGBufferSpecularTexMeta.h"
	"private/DeferredRendering.cpp"
	"public/DeferredRendering.h"
	"private/HelperMaterials/DXLightsCalculationsMaterial.cpp"
	"private/HelperMaterials/DXLightsCalculationsMaterial.h"
	"private/HelperMaterials/DXLightsCalculationsMaterialMeta.cpp"
	"private/HelperMaterials/DXLightsCalculationsMaterialMeta.h"
	"private/HelperMaterials/DXPostLightsCalculationsMaterialMeta.h"
	"private/HelperMaterials/DXPostLightsCalculationsMaterialMeta.cpp"
	"private/HelperMaterials/DXPostLightsCalculationsMaterial.h"
	"private/HelperMaterials/DXPostLightsCalculationsMaterial.cpp"
	"private/resources/DXShadowMapDSDescriptorHeapMeta.cpp"
	"private/resources/DXShadowMapDSDescriptorHeapMeta.h"
	"private/resources/DXShadowMapDSMeta.cpp"
	"private/resources/DXShadowMapDSMeta.h"
	"private/LightsManager.cpp"
	"public/LightsManager.h"
	"private/LightsManagerMeta.cpp"
	"public/LightsManagerMeta.h"
	"private/HelperMaterials/DXShadowMapMaterialMeta.cpp"
	"private/HelperMaterials/DXShadowMapMaterialMeta.h"
	"private/HelperMaterials/DXShadowMapMaterial.cpp"
	"private/HelperMaterials/DXShadowMapMaterial.h"
	"private/DXDeferredMaterialMeta.cpp"
	"public/DXDeferredMaterialMeta.h"
	"private/DXDeferredMaterial.cpp"
	"public/DXDeferredMaterial.h"
	"public/DXDeferredRP.h"
	"private/DXDeferredRP.cpp"
	"private/updaters/DXShadowMapUpdaterMeta.h"
	"private/updaters/DXShadowMapUpdaterMeta.cpp"
	"private/updaters/DXShadowMapRDUMeta.h"
	"private/updaters/DXShadowMapRDUMeta.cpp"
	"private/updaters/DXShadowMapUpdater.h"
	"private/updaters/DXShadowMapUpdater.cpp"
	"private/updaters/DXShadowMapRDU.cpp"
	"private/updaters/DXShadowMapRDU.h"
	"private/resources/DXShadowMapMeta.cpp"
	"private/resources/DXSMSettingsBufferMeta.h"
	"private/resources/DXSMSettingsBufferMeta.cpp"
	"private/resources/DXLightsBufferMeta.h"
	"private/resources/DXLightsBufferMeta.cpp"
	"private/utils.h"
	"private/utils.cpp"
)

target_include_directories(DeferredRP INTERFACE PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/public")
target_include_directories(DeferredRP PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/private")

target_link_libraries(DeferredRP INTERFACE PUBLIC RenderPass Materials Scene CommonResources)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET DeferredRP PROPERTY CXX_STANDARD 20)
endif()
