cmake_minimum_required (VERSION 3.8)

add_library (Rendering
	"public/Rendering.h"
	"private/Rendering.cpp"
	"public/DXRendererMeta.h"
	"private/DXRendererMeta.cpp"
	"public/DXRenderer.h"
	"private/DXRenderer.cpp"
	"private/RenderFenceMeta.h"
	"private/RenderFenceMeta.cpp"
	"private/RenderUtils.h"
	"private/RenderUtils.cpp"
	"public/DXCameraMeta.h"
	"private/DXCameraMeta.cpp"
	"public/DXCamera.h"
	"private/DXCamera.cpp"
	"public/DXCameraBufferMeta.h"
	"private/DXCameraBufferMeta.cpp"
	"private/DXVertexShaderMeta.h"
	"private/DXVertexShaderMeta.cpp"
	"private/DXPixelShaderMeta.h"
	"private/DXPixelShaderMeta.cpp"
	"private/DXComputeShaderMeta.h"
	"private/DXComputeShaderMeta.cpp"
	"private/Materials/DXUnlitErrorMaterial.h"
	"private/Materials/DXUnlitErrorMaterial.cpp"
	"private/Materials/DXUnlitErrorMaterialMeta.h"
	"private/Materials/DXUnlitErrorMaterialMeta.cpp"
	"private/Materials/DXUnlitErrorMaterial.h"
	"private/Materials/DXUnlitErrorMaterial.cpp"
	"public/UpdaterMeta.h"
	"private/UpdaterMeta.cpp"
	"public/Updater.h"
	"private/Updater.cpp"
	"private/RenderPass/DXUnlitRPMeta.h"
	"private/RenderPass/DXUnlitRPMeta.cpp"
	"private/RenderPass/DXUnlitRP.h"
	"private/RenderPass/DXUnlitRP.cpp"
	"public/DXMaterialRepo.h"
	"private/DXMaterialRepo.cpp"
	"public/DXMaterialRepoMeta.h"
	"private/DXMaterialRepoMeta.cpp"
	
	
	"private/Materials/SharederRepo.h"
	"private/Materials/SharederRepo.cpp"
	"private/Materials/DXUnlitMaterialMeta.h"
	"private/Materials/DXUnlitMaterialMeta.cpp"
	"private/Materials/DXUnlitMaterial.h"
	"private/Materials/DXUnlitMaterial.cpp"
	"private/Deferred/DeferredRendering.h"
	"private/Deferred/DeferredRendering.cpp"
	"private/Deferred/DXGBufferDuffuseTexMeta.h"
	"private/Deferred/DXGBufferDiffuseTexMeta.cpp"
	"private/Deferred/DXGBufferNormalTexMeta.h"
	"private/Deferred/DXGBufferNormalTexMeta.cpp"
	"private/Deferred/DXGBufferPositionTexMeta.h"
	"private/Deferred/DXGBufferPositionTexMeta.cpp"
	"private/RenderPass/DXDeferredRPMeta.h"
	"private/RenderPass/DXDeferredRPMeta.cpp"
	"private/RenderPass/DXDeferredRP.h"
	"private/RenderPass/DXDeferredRP.cpp"
	"private/Materials/DXDeferredMaterial.h"
	"private/Materials/DXDeferredMaterial.cpp"
	"private/Materials/DXDeferredMaterialMeta.h"
	"private/Materials/DXDeferredMaterialMeta.cpp"
	
	
	"private/Deferred/DXGBufferSpecularTexMeta.h"
	"private/Deferred/DXGBufferSpecularTexMeta.cpp"
	"private/Deferred/DXGBufferAmbientLitTexMeta.h"
	"private/Deferred/DXGBufferAmbientLitTexMeta.cpp"
	"private/Deferred/DXGBufferDiffuseLitTexMeta.h"
	"private/Deferred/DXGBufferDiffuseLitTexMeta.cpp"
	"private/Deferred/DXGBufferSpecularLitTexMeta.h"
	"private/Deferred/DXGBufferSpecularLitTexMeta.cpp"
	"private/Lights/LightsManagerMeta.h"
	"private/Lights/LightsManagerMeta.cpp"
	"private/Lights/LightsManager.h"
	"private/Lights/LightsManager.cpp"
	"private/Lights/DXShadowMapMeta.h"
	"private/Lights/DXShadowMapMeta.cpp"
	"private/Materials/DXShadowMapMaterialMeta.h"
	"private/Materials/DXShadowMapMaterialMeta.cpp"
	"private/Materials/DXShadowMapMaterial.h"
	"private/Materials/DXShadowMapMaterial.cpp"
	"private/Lights/DXShadowMapDSMeta.h"
	"private/Lights/DXShadowMapDSMeta.cpp"
	"private/Lights/DXShadowMapDSDescriptorHeapMeta.h"
	"private/Lights/DXShadowMapDSDescriptorHeapMeta.cpp"
	"private/RenderPass/DXDisplaySMRPMeta.h"
	"private/RenderPass/DXDisplaySMRPMeta.cpp"
	"private/RenderPass/DXDisplaySMRP.h"
	"private/RenderPass/DXDisplaySMRP.cpp")

target_include_directories(Rendering INTERFACE PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/public")
target_include_directories(Rendering PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/private")

target_link_libraries(Rendering INTERFACE PUBLIC Jobs DataLib Collada RenderingCore Scene RenderPass Materials)

target_link_libraries(Rendering PRIVATE "d3d12.lib" "dxgi.lib" "d3dcompiler.lib" "dxguid.lib")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Rendering PROPERTY CXX_STANDARD 20)
endif()
